# python-attractor

./: .gitignore  DOT_SPEC.md  README.md  pyproject.toml
attractor/: __init__.py  cli.py
attractor/agent/: __init__.py  environment.py  events.py  loop.py  session.py  tools.py  truncation.py
attractor/llm/: __init__.py  adapter.py  api.py  client.py  errors.py  retry.py  types.py
attractor/pipeline/: __init__.py  conditions.py  engine.py  graph.py  handlers.py  interviewer.py  llm_backend.py  parser.py  stylesheet.py  validation.py
dot_agent/: __init__.py  cli.py  prompt.py  tools.py
examples/: hello.dot
pipelines/: dot_agent.dot
tests/: test_agent.py  test_dot_agent.py  test_llm_types.py  test_pipeline.py
