[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attractor"
version = "0.1.0"
description = "Deterministic execution harness for non-interactive agent runs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
attractor = "attractor.cli:main"
dot-agent = "dot_agent.cli:main"

[tool.setuptools.packages.find]
include = ["attractor*", "dot_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
